Remove data-target="#" to fix issue with LibAnswers.

--- a/html/header.html
+++ b/html/header.html
@@ -89,7 +89,7 @@
             <div id="navbar" class="overlay-menu-scroll" role="menu" aria-expanded="false">
                 <div class="navbar-scroller">
                     <ul class="menu nav navbar-nav">
-                        <li class="menu__item is-expanded first expanded dropdown"><a title="" class="menu__link text-uppercase dropdown-toggle nolink" data-target="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="0">Find materials <span class="caret"></span></a>
+                        <li class="menu__item is-expanded first expanded dropdown"><a title="" class="menu__link text-uppercase dropdown-toggle nolink"  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="0">Find materials <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li class="menu__item is-leaf first leaf"><a href="https://new.library.arizona.edu/find/books" title="" class="menu__link" target="_blank" rel="noopener noreferrer" aria-expanded="false">Books &amp; ebooks</a></li>
                                 <li class="menu__item is-leaf leaf"><a href="https://new.library.arizona.edu/find/articles" title="" class="menu__link" target="_blank" rel="noopener noreferrer" aria-expanded="false">Articles &amp; journals</a></li>
@@ -98,7 +98,7 @@
                                 <li class="menu__item is-leaf last leaf"><a href="https://new.library.arizona.edu/find/other" title="" class="menu__link" target="_blank" rel="noopener noreferrer" aria-expanded="false">Other types of materials</a></li>
                             </ul>
                         </li>
-                        <li class="menu__item is-expanded expanded dropdown"><a title="" class="menu__link text-uppercase dropdown-toggle nolink" data-target="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="0">Borrow &amp; request <span class="caret"></span></a>
+                        <li class="menu__item is-expanded expanded dropdown"><a title="" class="menu__link text-uppercase dropdown-toggle nolink"  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="0">Borrow &amp; request <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li class="menu__item is-leaf first leaf"><a href="https://new.library.arizona.edu/borrow" title="" class="menu__link" target="_blank" rel="noopener noreferrer" aria-expanded="false">Checkouts &amp; renewals</a></li>
                                 <li class="menu__item is-leaf leaf"><a href="https://new.library.arizona.edu/tech/borrow" title="" class="menu__link" target="_blank" rel="noopener noreferrer" aria-expanded="false">Borrow technology</a></li>
@@ -106,7 +106,7 @@
                                 <li class="menu__item is-leaf last leaf"><a href="https://new.library.arizona.edu/borrow/billing" title="" class="menu__link" target="_blank" rel="noopener noreferrer" aria-expanded="false">Overdue &amp; lost materials</a></li>
                             </ul>
                         </li>
-                        <li class="menu__item is-expanded expanded dropdown"><a title="" class="menu__link text-uppercase dropdown-toggle nolink" data-target="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="0">Study &amp; create <span class="caret"></span></a>
+                        <li class="menu__item is-expanded expanded dropdown"><a title="" class="menu__link text-uppercase dropdown-toggle nolink"  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="0">Study &amp; create <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li class="menu__item is-leaf first leaf"><a href="https://new.library.arizona.edu/visit/spaces" title="" class="menu__link" target="_blank" rel="noopener noreferrer" aria-expanded="false">Rooms &amp; spaces</a></li>
                                 <li class="menu__item is-leaf leaf"><a href="https://new.library.arizona.edu/catalyst" title="" class="menu__link" target="_blank" rel="noopener noreferrer" aria-expanded="false">CATalyst Studios</a></li>
@@ -114,7 +114,7 @@
                                 <li class="menu__item is-leaf last leaf"><a href="https://new.library.arizona.edu/visit/tech" title="" class="menu__link" target="_blank" rel="noopener noreferrer" aria-expanded="false">Equipment &amp; technology</a></li>
                             </ul>
                         </li>
-                        <li class="menu__item is-expanded expanded dropdown"><a title="" class="menu__link text-uppercase dropdown-toggle nolink" data-target="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="0">Research &amp; publish <span class="caret"></span></a>
+                        <li class="menu__item is-expanded expanded dropdown"><a title="" class="menu__link text-uppercase dropdown-toggle nolink"  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="0">Research &amp; publish <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li class="menu__item is-leaf first leaf"><a href="https://new.library.arizona.edu/research/subject" title="" class="menu__link" target="_blank" rel="noopener noreferrer" aria-expanded="false">Research by subject/topic</a></li>
                                 <li class="menu__item is-leaf leaf"><a href="https://new.library.arizona.edu/research/course" title="" class="menu__link" target="_blank" rel="noopener noreferrer" aria-expanded="false">Research by course/program</a></li>
@@ -123,7 +123,7 @@
                                 <li class="menu__item is-leaf last leaf"><a href="https://new.library.arizona.edu/research/support" title="" class="menu__link" target="_blank" rel="noopener noreferrer" aria-expanded="false">Support for researchers</a></li>
                             </ul>
                         </li>
-                        <li class="menu__item is-expanded last expanded dropdown"><a title="" class="menu__link text-uppercase dropdown-toggle nolink" data-target="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="0">About us <span class="caret"></span></a>
+                        <li class="menu__item is-expanded last expanded dropdown"><a title="" class="menu__link text-uppercase dropdown-toggle nolink"  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="0">About us <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li class="menu__item is-leaf first leaf"><a href="https://new.library.arizona.edu/about/organization" title="" class="menu__link" target="_blank" rel="noopener noreferrer" aria-expanded="false">Our organization</a></li>
                                 <li class="menu__item is-leaf leaf"><a href="https://new.library.arizona.edu/hours" title="" class="menu__link" target="_blank" rel="noopener noreferrer" aria-expanded="false">Hours</a></li>
