--- a/html/header.html
+++ b/html/header.html
@@ -14,19 +14,24 @@
             <div class="col-xs-2 col-sm-6">
                 <div class="row">
                     <div class="region region-header-ua-utilities">
-                        <div id="block-search-form" class="block block-search contextual-links-region first last odd" role="search">
-                            <form action="https://new.library.arizona.edu/sitesearch" id="search-block-form" method="get" accept-charset="UTF-8">
+                        <div class="col-sm-5 col-md-4 col-lg-3 hidden-xs pull-right no-gutter">
+                            <div id="block-search-form" class="block block-search contextual-links-region first last odd" role="search">
+                                <form action="https://new.library.arizona.edu/sitesearch" id="search-block-form" method="get" accept-charset="UTF-8">
 
-                                <div>
+                                    <div>
 
-                                    <div class="container-inline">
-                                        <h2 class="element-invisible">Search form</h2>
-                                        <div class="form-item form-item-search-block-form form-type-textfield form-group"><input title="Enter the terms you wish to search for." placeholder="Search UA Libraries Website" class="input-search form-control form-text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search Site'" type="text" id="edit-search-block-form--2" name="search" value="" size="15" maxlength="128"> <label class="control-label element-invisible" for="edit-search-block-form--2">Search</label>
+                                        <div class="container-inline">
+                                            <h2 class="element-invisible">Search form</h2>
+                                            <div class="form-item form-item-search-block-form form-type-textfield form-group"><input title="Enter the terms you wish to search for." placeholder="Search UA Libraries Website" class="input-search form-control form-text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search Site'" type="text" id="edit-search-block-form--2" name="search" value="" size="15" maxlength="128"> <label class="control-label element-invisible" for="edit-search-block-form--2">Search</label>
+                                            </div>
+                                            <div class="form-actions form-wrapper" id="edit-actions"><input class="btn btn-search radius form-submit" type="submit" id="edit-submit" name="op" value="Search"></div>
                                         </div>
-                                        <div class="form-actions form-wrapper" id="edit-actions"><input class="btn btn-search radius form-submit" type="submit" id="edit-submit" name="op" value="Search"></div>
                                     </div>
-                                </div>
-                            </form>
+                                </form>
+                            </div>
+                        </div>
+                        <div class="col-sm-7 col-md-5 col-lg-5 col-lg-offset-4 no-gutter col-md-offset-3">
+                            <a class="search-input-link visible-xs pull-right" href="https://new.library.arizona.edu/sitesearch"></a>
                         </div>
                     </div>
                 </div>
