Add library address to footer.

--- a/html/footer.html
+++ b/html/footer.html
@@ -27,9 +27,8 @@
                         <div class="entity entity-bean bean-uaqs-contact-summary clearfix" about="/ua_quickstart/block/main-unit-or-department-contact-">
                             <div class="content">
                                 <p class="text-center-xs text-right-sm text-right-md text-right-lg"><span>
-
-                                        Universirty Libraries Tucson AZ 85721
-
+                                    1510 E. University Blvd.
+                                    Tucson, AZ 85721
                                     </span><span>
 
                                         <a href="https://new.library.arizona.edu/contact">Contact Us</a>
